// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`create-thread tool creating threads should create a thread in a channel 1`] = `
"# Thread Created

**Title:** New Discussion
**Thread ID:** thread-id-1
**Channel ID:** channel-id-1
**Created:** 2024-01-01T00:00:00.000Z
**URL:** https://comms.todoist.com/a/11111/ch/channel-id-1/t/thread-id-1/

## Content

Let us discuss this topic

> Note: Threads you create do not appear in your own Inbox by default — only recipients see them there. Find the thread in the channel view or via its URL."
`;

exports[`create-thread tool creating threads should create a thread with recipients 1`] = `
"# Thread Created

**Title:** Notify Users
**Thread ID:** thread-id-1
**Channel ID:** channel-id-1
**Created:** 2024-01-01T00:00:00.000Z
**URL:** https://comms.todoist.com/a/11111/ch/channel-id-1/t/thread-id-1/

## Content

Important update

> Note: Threads you create do not appear in your own Inbox by default — only recipients see them there. Find the thread in the channel view or via its URL."
`;
